Update EmbeddingHandler.java